--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <meta name="viewport" content="width=device-width, initial-scale= 1.0">
 <title>ToDo</title>
 <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/logo.png"/>
-<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/logo.png">
-<link rel="icon" href="https://raw.githubusercontent.com/adm410/ToDo/V1.0.0/favicon.ico">
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/apple-touch-icon.png">
+<link rel="icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/favicon.ico">
 <main id="body"><button id="topBtn"><a href="#body">^</a></button>
     <div class="date" onclick="openNav()">
     <span id="date"></span> 
