--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/logo.png"/>
 <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/logo.png">
 <link rel="icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/favicon.ico">
-<main id="body"><button id="topBtn"><a href="#body">^</a></button>
+<main id="body"><input id="topBtn" value="^" type="button" onClick="document.getElementById('body').scrollIntoView();" />
     <div class="date" onclick="openNav()">
     <span id="date"></span> 
     <br><span id="clock"></span></div>
