--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale= 0.7">
 <title>ToDo</title>
 <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/adm410/ToDo/V2.2.1/logo.png"/>
-<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.2.1/apple-touch-icon.png">
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.1/logo.png">
 <link rel="icon" href="https://raw.githubusercontent.com/adm410/ToDo/V2.2.1/favicon.ico">
 <main id="body"><input id="topBtn" value="^" type="button" onClick="document.getElementById('body').scrollIntoView();" />
     <div class="date" onclick="openNav()">
