--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>ToDo</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/adm410/ToDo/V4/logo.png"/>
-  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/adm410/ToDo/4/logo.png">
-  <link rel="icon" href="https://raw.githubusercontent.com/adm410/ToDo/V4/favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="https://github.com/adm410/ToDo/releases/download/V4/logo.png"/>
+  <link rel="apple-touch-icon" href="https://github.com/adm410/ToDo/releases/download/V4/apple-touch-icon.png">
+  <link rel="icon" href="https://github.com/adm410/ToDo/releases/download/V4/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
